--- a/css/main.css
+++ b/css/main.css
@@ -22,13 +22,23 @@ h3{
 }
 li{
     margin-top: 20px;
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
+    list-style: none;
+    padding-left: 30px;
+}
+ul{
+    padding-left: 0px;
+}
+
+#main-container {
+    padding-bottom: 20px;
 }
 .check{
     border: 1px solid #B7E5DC;
     border-radius: 50%;
     color: #B7E5DC;
     padding: 2px;
+    margin-right: 5px;
 }
 .delete{
     border: 1px solid #EB5B54;
@@ -36,6 +46,7 @@ li{
     border-radius: 50%;
     padding: 5px;
     font-size: 8px;
+    margin-right: 5px;
 }
 
 .editorial{
