--- a/css/main.css
+++ b/css/main.css
@@ -13,25 +13,31 @@ body{
 .white{
     background:white;
 }
+
 #first-title{
     margin-top: 2px;;
 }
+
 h3{
     padding-left: 30px;
     padding-top: 15px;
 }
+
 li{
     margin-top: 20px;
     margin-bottom: 20px;
     list-style: none;
     padding-left: 30px;
+    ft: 30px;
 }
+
 ul{
     padding-left: 0px;
 }
 
-#main-container {
+.main-container {
     padding-bottom: 20px;
+    padding-left: 15px;
 }
 .check{
     border: 1px solid #B7E5DC;
@@ -86,6 +92,7 @@ nav{
     height: 60px;
     line-height: 60px;
     margin-top: 30px;
+    padding-left: 15px;
 }
 .add-task {
     margin-left: 30px;
@@ -102,8 +109,6 @@ nav{
     font-size: 14px;
     color: grey;
 }
-
-
 /* row */
 .goals{
     color: white;
@@ -112,6 +117,7 @@ nav{
     padding: 5px;
     background: #9C72E4
 }
+
 .recruiting{
     color: white;
     font-size: 12px;
@@ -119,6 +125,7 @@ nav{
     padding: 5px;
     background: #64c0a9;
 }
+
 .mobile{
     color: white;
     font-size: 12px;
@@ -126,6 +133,7 @@ nav{
     padding: 5px;
     background: #F29E33
 }
+
 .website{
     color: white;
     font-size: 12px;
