--- a/css/main.css
+++ b/css/main.css
@@ -95,19 +95,21 @@ nav{
     padding-left: 15px;
 }
 .add-task {
+    border: 1px solid #F6F8F9;
     margin-left: 30px;
-    padding: 10px;
-    border-radius: 10%;
-    font-size: 14px;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
     color: #fff;
 }
 
 .add-section{
     border: 1px solid grey;
-    padding: 10px;
-    border-radius: 10%;
-    font-size: 14px;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
     color: grey;
+    background-color: transparent;
 }
 /* row */
 .goals{
